BUGFIX: fixed name overlap

--- a/public/style.css
+++ b/public/style.css
@@ -148,11 +148,18 @@ form div {
   text-align: center;
 }
 
+/*** Single Product View ***/
+
 .single-product-container {
   display: flex;
   justify-content: center;
   margin: 2vh 0 1vh 0;
   flex-wrap: wrap;
+}
+
+.image-loader {
+  height: 20em;
+  width: 20em;
 }
 
 .single-product-img {
@@ -164,15 +171,10 @@ form div {
   align-items: center;
 }
 
-.image-loader {
-  height: 20em;
-  width: 20em;
-}
-
 .single-product-info-container {
   padding-left: 50px;
   padding-right: 50px;
-  height: 30em;
+  height: 40em;
   width: 22em;
 }
 
@@ -180,8 +182,8 @@ form div {
   color: black;
   font-size: 2em;
   font-weight: 50;
-  margin: 4vh 0 2vh 0;
-  height: 2em;
+  margin: 4vh 0 0vh 0;
+  height: 3em;
 }
 
 .single-product-description {
@@ -203,6 +205,7 @@ form div {
   padding-left: 0.2em;
 }
 
+/*** Rating Stars ***/
 label .star {
   float: left;
 }
@@ -217,6 +220,7 @@ input[type='radio'] {
   height: 2em;
   width: 2em;
 }
+
 /***Product Card***/
 .flex-container {
   display: flex;
